need to finish preparing dynamic list of tasks

--- a/5_todo/index.html
+++ b/5_todo/index.html
@@ -25,20 +25,12 @@
     <input class="toggle-all"
            type="checkbox" />
     <ul class="todo-list">
-      <li>
-        <div class="view">
-          <input class="toggle"
-                 type="checkbox" />
-          <label>Todo Title</label>
-          <button class="destroy"></button>
-        </div>
-        <input class="edit" />
-      </li>
+      
     </ul>
   </section>
 
   <footer class="footer">
-    <span class="todo-count"><strong>0</strong> items left</span>
+    <span class="todo-count"><strong class="count">0</strong> items left</span>
     <button class="clear-completed">Clear completed
     </button>
   </footer>
